# scrapy_spider_utils

./: README.md  deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: main.yml
scrapy_spider_utils/: esclient.py  esdupefilter.py  eswriter.py  mirai_client.py
scrapy_spider_utils/login/: baseclient.py
spider_utils/: auto_notify.py  esdupefilter.py  mirai_client.py
spider_utils/login/: baseclient.py  douban_client.py
