[tool.poetry]
name = "spider_utils"
version = "0.0.1"
description = "scrapy爬虫的一些工具类"
authors = ["gwq5210 <gwq5210@qq.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
fake-useragent = ">=0.1.11"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
